# hydrangea-compiler

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  bench-nbody-repa.sh  flake.nix  hydrangea.cabal
.devcontainer/: Dockerfile  devcontainer.json  install-hydrangea-vscode-extension.sh
.github/workflows/: ci.yml
app/: CBackend.hs  CUDABackend.hs  Main.hs  MetalBackend.hs
bench/: Makefile  README.md  check_fusion.sh  plot_full_sweep.sh  plot_full_sweep_normalized.sh  run_full_sweep.sh  run_fusion_case_studies.sh  run_quick.sh  run_sweep.sh
bench/accel/: accel-bench.cabal  run.sh
bench/accel/app/: Main.hs
bench/accel/src/Hydrangea/AccelBench/: Benchmarks.hs  Common.hs  Harness.hs
bench/blackscholes/: blackscholes.hyd  blackscholes_ref.c  check_output.py  gen_input.py  run.sh
bench/c_bench/: timing.h
bench/coo_csr_build/: coo_csr_build.hyd  coo_csr_build_ref.c  run.sh
bench/graph_messages/: graph_messages.hyd  graph_messages_ref.c  run.sh
bench/guarded_weighted_histogram/: guarded_weighted_histogram.hyd  guarded_weighted_histogram_ref.c  guarded_weighted_histogram_unfused.hyd  run.sh
bench/kde/: kde.hyd  kde_ref.c  kde_unfused.hyd
bench/kde_chain/: kde_chain.hyd  kde_chain_ref.c  run.sh
bench/mandelbrot/: gen_input.py  mandelbrot.hyd  mandelbrot_ref.c  run.sh
bench/map_chain/: map_chain.hyd  map_chain_unfused.hyd
bench/matmul/: gen_mats.c  mat_mul_bench.hyd  matmul_ref.c  run_bench.sh
bench/nbody/: gen_input.py  nbody.hyd  nbody_ref.c  run.sh
bench/repa/: Makefile  repa-bench.cabal  run.sh
bench/repa/app/: Main.hs
bench/repa/src/Hydrangea/RepaBench/: Benchmarks.hs  Common.hs  Harness.hs  NBodyHarness.hs
bench/spmv/: gen_input.py  run.sh  spmv.hyd  spmv_ref.c
bench/stencil/: gen_input.py  jacobi_2d.hyd  jacobi_2d_interior.hyd  jacobi_2d_ref.c  out_interior.c  run_bench.sh  stencil_2d.hyd  stencil_interior.hyd  stencil_interior_ref.c  stencil_ref.c
bench/voxel_rasterization/: run.sh  voxel_rasterization.hyd  voxel_rasterization_ref.c
bench/voxel_trilinear_splat/: run.sh  voxel_trilinear_splat.hyd  voxel_trilinear_splat_ref.c  voxel_trilinear_splat_unfused.hyd
bench/voxel_trilinear_splat_chain/: run.sh  voxel_trilinear_splat_chain.hyd  voxel_trilinear_splat_chain_ref.c
bench/weighted_histogram/: run.sh  weighted_histogram.hyd  weighted_histogram_ref.c
demo/excitable_sdl/: README.md  build.sh  excitable_live.hyd  main.cpp
demo/gray_scott/: build.sh  gray_scott.hyd  main.cpp
demo/gray_scott_sdl/: build.sh  gray_scott_live.hyd  main.cpp
demo/pic_sdl/: README.md  build.sh  main.cpp  pic_density.hyd
demo/point_cloud_sdl/: README.md  build.sh  main.cpp  point_cloud_live.hyd
demo/ray_ppm/: README.md  build.sh  main.cpp  metal_build.sh  ray_ppm.hyd
demo/ray_sdl/: README.md  build.sh  main.cpp  metal_build.sh  ray_live.hyd
demo/scan_sdl/: README.md  build.sh  main.cpp  scan_live.hyd
demo/voxel_fancy_sdl/: build.sh  metal_build.sh  voxel_fancy.hyd
demo/voxel_ppm/: build.sh  main.cpp  metal_build.sh  render.hyd  voxel_scene.hyd
demo/voxel_sdl/: README.md  build.sh  build_320.sh  build_640.sh  main.cpp  metal_build.sh  metal_build_320.sh  metal_build_640.sh  voxel_live.hyd  voxel_live_320.hyd  voxel_live_640.hyd
demo/wave_sdl/: build.sh  main.cpp  wave.hyd
docs/: _config.yml  array-kernels.md  cli-reference.md  index.md  static-bounds-checking.md
examples/: arith.hyd  arrays.hyd  complete.hyd  coo_sort_row_major.hyd  coo_to_csr_pipeline.hyd  dot.hyd  dot_csv.hyd  dot_csv_f.hyd  float_test.hyd  graph_messages_csr.hyd  halo_law_1d.hyd  heat_2d.hyd  iterate_split.hyd  jacobi_1d.hyd  matA_3x3.csv  matA_4x4.csv  matB.csv  matB_3x3.csv  matB_4x4.csv  mat_mul.hyd  mat_mul_fused.hyd  mat_mul_fused_parallel.hyd  mat_mul_parallel.hyd  mat_mul_simple.hyd  nested_pair.hyd  pair_debug.hyd  pair_fold_simple.hyd  pair_fold_test.hyd  pair_test.hyd  read_array.hyd  reduce_reg.hyd  scan_prefix_sum.hyd  scatter_chain.hyd  scatter_guarded_fused.hyd  scatter_parallel_atomic.hyd  scatter_parallel_direct.hyd  scatter_parallel_privatized.hyd  segmented_group_sum.hyd  simple.hyd  sort_indices_gather.hyd  (+3 more)
runtime/: hyd_write_csv.c  hydrangea_runtime.h
runtime/metal/: hyd_metal_runtime.h
src/Language/Hydrangea/: CFG.hs  CFGAnalysis.hs  CFGCore.hs  CFGOpt.hs  CFGPipeline.hs  CFGTyping.hs  CLI.hs  CodegenC.hs  CodegenCUDA.hs  CodegenMSL.hs  Dependence.hs  ErrorFormat.hs  Frontend.hs  Fusion.hs  Infer.hs  Interpreter.hs  Lexer.x  Lowering.hs  Parallelize.hs  Parser.y  Polyhedral.hs  Predicate.hs  Pretty.hs  Prune.hs  Shape.hs  ShapeNormalize.hs  Solver.hs  Specialize.hs  Syntax.hs  Tile.hs  Uniquify.hs  Util.hs  Vectorize.hs
test/Language/Hydrangea/: CFGAnalysisSpec.hs  CFGCoreSpec.hs  CFGOptSpec.hs  CFGPipelineSpec.hs  CFGSpec.hs  CFGTypingSpec.hs  CLISpec.hs  CodegenCSpec.hs  DependenceSpec.hs  EndToEndSpec.hs  FrontendSpec.hs  FusionSpec.hs  GatherBoundsSpec.hs  InterpreterSpec.hs  KernelCheckSpec.hs  LexerSpec.hs  LoweringSpec.hs  MatmulInterpSpec.hs  PairSpec.hs  ParallelizeSpec.hs  ParserSpec.hs  PolyhedralSpec.hs  PruneSpec.hs  RecordSpec.hs  ReduceLoweringSpec.hs  SpecializeSpec.hs  StencilSpec.hs  SyntaxSpec.hs  TestUtil.hs  TileSpec.hs  VectorizeSpec.hs  WherePrecondSpec.hs
tree-sitter-hydrangea/: README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-hydrangea/editors/emacs/: hydrangea-ts-mode.el
tree-sitter-hydrangea/queries/: highlights.scm
tree-sitter-hydrangea/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-hydrangea/test/corpus/: comments.txt  declarations.txt  expressions.txt
vscode-hydrangea/: .gitignore  .vscodeignore  extension.js  language-configuration.json  package-lock.json  package.json
vscode-hydrangea/scripts/: prepare-assets.mjs
